--- a/index.html
+++ b/index.html
@@ -29,30 +29,34 @@
   </nav>
 <br><br>
   <img src="namaste.gif" alt="Nature" class="responsive">
-  
-  <h1>what is नटखट India</h1>
-  <h2>नटखट India एक ऐसी साइट है जहाँ किसी भी उम्र का कोई भी व्यक्ति आ सकता है, और मुफ्त में टेक्स्ट को हैंडराइटिंग में बदल सकता है</h2>
-  <hr>
-  <h1>What if your teacher/senior got to know that you had made your work done from नटखट India</h1>
-  <h2>नटखट India भारत इस बात की कोई गारंटी नहीं लेता है कि अगर आपके शिक्षक आपको पकड़ते हैं तो क्या होगा, नटखट India केवल सुझाव देगा कि आप अपने दम पर पहला पृष्ठ बनाएं और अन्य पृष्ठों के लिए आप नटखट India का उपयोग कर सकते हैं</h2>
-  <hr>
-  <h1>Is नटखट India completely free?</h1>
-  <h2>हाँ नटखट India पूरी तरह से, बिल्कुल, पूरी तरह से नि: शुल्क है, उपयोगकर्ता को नटखट India का उपयोग करने के लिए एक पैसा देने की आवश्यकता नहीं है</h2>
-  <hr>
-  <h1>What does नटखट India get in return</h1>
-  <h2>नटखट India सिर्फ प्यार चाहता है, हमारे पास बहुत पैसा है, हम प्यार के भूखे हैं, इसके अलावा नटखट India का मुख्य उद्देश्य एक छात्र की मेहनत को कम करना है, और चाहता है कि छात्र शारीरिक गतिविधियों पर ध्यान केंद्रित करे  लेखन कार्य के लिए नटखट India यहाँ है</h2>
-  <hr>
-  <h1>Why to use नटखट India </h1>
-  <h2>•यह पूरी तरह से मुफ़्त है<br>
-    •दिन और रात मोड उपलब्ध है<br>
-    •अलग-अलग रंग उपलब्ध हैं यदि किसी को प्रश्न लिखने की आवश्यकता है, तो वह इसे काले रंग या किसी अन्य रंग से लिख सकता है।
-  </h2>
-  <hr>
-  <h1>Can I write in hindi using नटखट India</h1>
-  <h2>क्षमा करें, आप हिंदी में नहीं लिख सकते, लेकिन नटखट India ने वादा किया है कि एक अपडेट के बाद उपयोगकर्ता हिंदी, संस्कृत और मराठी में भी लिख सकेंगे। सभी सवालों के जवाब हिंदी में दिए जाने का कारण यह है कि हिंदी बहुत जल्द आ रही है नटखट India पर</h2>
-  <hr>
-  <h1>How to use नटखट India</h1>
-  <h2>नटखट India is very easy to use,the user just need to , either copy the text or write the text and then automatically नटखट India producs handwritten image which a auser can save it for later,print it and can use it </h2>
+
+  <div id="content">
+    <h1>what is नटखट India?</h1>
+    <h2>नटखट India एक ऐसी साइट है जहाँ किसी भी उम्र का कोई भी व्यक्ति आ सकता है, और मुफ्त में टेक्स्ट को हैंडराइटिंग में बदल सकता है|</h2>
+    <hr>
+    <h1>What if your teacher/senior got to know that you had made your work done from नटखट India?</h1>
+    <h2>नटखट India भारत इस बात की कोई गारंटी नहीं लेता है कि अगर आपके शिक्षक आपको पकड़ते हैं तो क्या होगा, नटखट India केवल सुझाव देगा कि आप अपने दम पर पहला पृष्ठ बनाएं और अन्य पृष्ठों के लिए आप नटखट India का उपयोग कर सकते हैं|</h2>
+    <hr>
+    <h1>Is नटखट India completely free?</h1>
+    <h2>हाँ नटखट India पूरी तरह से, बिल्कुल, पूरी तरह से नि: शुल्क है, उपयोगकर्ता को नटखट India का उपयोग करने के लिए एक पैसा देने की आवश्यकता नहीं है|</h2>
+    <hr>
+    <h1>What does नटखट India get in return?</h1>
+    <h2>नटखट India सिर्फ प्यार चाहता है, हमारे पास बहुत पैसा है, हम प्यार के भूखे हैं, इसके अलावा नटखट India का मुख्य उद्देश्य एक छात्र की मेहनत को कम करना है, और चाहता है कि छात्र शारीरिक गतिविधियों पर ध्यान केंद्रित करे  लेखन कार्य के लिए नटखट India यहाँ है|</h2>
+    <hr>
+    <h1>Why to use नटखट India?</h1>
+    <h2>•यह पूरी तरह से मुफ़्त है<br>
+      •दिन और रात मोड उपलब्ध है<br>
+      •अलग-अलग रंग उपलब्ध हैं यदि किसी को प्रश्न लिखने की आवश्यकता है, तो वह इसे काले रंग या किसी अन्य रंग से लिख सकता है।
+    </h2>
+    <hr>
+    <h1>Can I write in hindi using नटखट India</h1>
+    <h2>क्षमा करें, आप हिंदी में नहीं लिख सकते, लेकिन नटखट India ने वादा किया है कि एक अपडेट के बाद उपयोगकर्ता हिंदी, संस्कृत और मराठी में भी लिख सकेंगे। सभी सवालों के जवाब हिंदी में दिए जाने का कारण यह है कि हिंदी बहुत जल्द आ रही है नटखट India पर</h2>
+    <hr>
+    <h1>How to use नटखट India</h1>
+    <h2>नटखट India is very easy to use,the user just need to , either copy the text or write the text and then automatically नटखट India producs handwritten image which a auser can save it for later,print it and can use it </h2>
+
+  </div>
+
   <hr>
   <div class="row">
     <div class="column">
