--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <!-- Created By CodingNepal - www.codingnepalweb.com -->
 <html lang="en">
 <head>
+<link rel="stylesheet" href="https://unpkg.com/boltcss/bolt.min.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>
