--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <h1 class="xlarge-font "><b>Text to handwritting </b></h1>
                 <h1 class="large-font " style="color:red; "><b>automatically</b></h1>
                 <p><span style="font-size:24px ">•यह पूरी तरह से मुफ़्त है<br> •दिन और रात मोड उपलब्ध है<br> •अलग-अलग रंग उपलब्ध हैं यदि किसी को प्रश्न लिखने की आवश्यकता है, तो वह इसे काले रंग या किसी अन्य रंग से लिख सकता है।</p>
-                <button class="button " style="background-color:red ">Read More</button>
+                <a href="home.html"><button class="button " style="background-color:red ">NatkhatINDIA</button></a>
             </div>
         </div>
     </div>
