--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
       <div class="container">
         <div class="row">
           <div class="column-66">
-            <h1 class="xlarge-font"><b>Why</b></h1>
+            <h1 class="xlarge-font"><b>What is</b></h1>
             <h1 class="large-font" style="color:MediumSeaGreen;"><b>नटखट India</b></h1>
             <p><span style="font-size:36px">Make assignments like a pro.</span> You should use this website to reduce your hardwork of writting the assignmnets,simply copy the text and within seconds the handwritting is generated. Used For Converting Text To Handwritting For Free,multiple color options avilable along with day and night mode available,useful for the students for completing their assignments</p><br>
             <a href="home.html"><button class="button">नटखट India</button></a>
